--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: helm-deployment
+  name: {{ .Values.deployment.name }}
   labels:
-    app: {{ }}
+    app: {{ .Values.deployment.label }}
 spec:
-  replicas: 1
+  replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      app: nginx
+      app: {{ .Values.deployment.label }}
   template:
     metadata:
       labels:
-        app: nginx
+        app: {{ .Values.deployment.label }}
     spec:
       containers:
-      - name: nginx
-        image: ghcr.io/martinvasseur-lab/kargo-project
+      - name: {{ .Values.deployment.container.name }}
+        iamge: {{ include "mychart.image" }}
         ports:
-        - containerPort: 80
+        - containerPort: {{ .Values.service.port }}
