--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -1,35 +1,17 @@
 image:
-  repository: ghcr.io/akuity/guestbook
+  repository: ghcr.io/martinvasseur-lab/helm-deployment
   pullPolicy: IfNotPresent
   tag: latest
 
 replicaCount: 1
 
-imagePullSecrets: []
-
-featureFlags: {}
-  # FEATURE_FOO: enabled
+deployment:
+  name: helm-deployment
+  label: helm
+  container: 
+    name: helm
 
 service:
   type: ClusterIP
-  port: 80
+  port: 3000
 
-ingress:
-  enabled: false
-  className: ""
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  hosts:
-    - host: chart-example.local
-      paths:
-        - path: /
-          pathType: ImplementationSpecific
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
-
-podAnnotations: {}
-
-resources: {}
