--- a/stages/dev/values.yaml
+++ b/stages/dev/values.yaml
@@ -2,3 +2,9 @@ image:
   tag: 1.0.0
 
 replicaCount: 1
+
+deployment:
+  name: helm-deployment-dev
+  label: helm-dev
+  container: 
+    name: helm-dev
