--- a/stages/prod-eu/values.yaml
+++ b/stages/prod-eu/values.yaml
@@ -2,3 +2,9 @@ image:
   tag: 1.0.0
 
 replicaCount: 3
+
+deployment:
+  name: helm-deployment-prod-eu
+  label: helm-prod-eu
+  container: 
+    name: helm-prod-eu
