--- a/stages/qara/values.yaml
+++ b/stages/qara/values.yaml
@@ -1,4 +1,11 @@
 image:
   tag: 1.0.0
 
-replicaCount: 3
+replicaCount: 1
+
+
+deployment:
+  name: helm-deployment-qara
+  label: helm-qara
+  container: 
+    name: helm-qara
