--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: {{ .Values.deployment.container.name }}
-        iamge: {{ include "mychart.image" }}
+        iamge: {{ include "mychart.image" . }}
         ports:
         - containerPort: {{ .Values.service.port }}
