--- a/stages/qara/values.yaml
+++ b/stages/qara/values.yaml
@@ -12,3 +12,9 @@ deployment:
 
 service: 
   name: helm-service-qara
+
+gateway:
+  route: 
+    name: helm-route-qara
+  reference:
+    name: helm-reference-qara
