--- a/manifests.yaml
+++ b/manifests.yaml
@@ -10,8 +10,8 @@ spec:
     app: helm-dev
   ports:
   - protocol: TCP
-    port: 3000
-    targetPort: 3000
+    port: 5000
+    targetPort: 5000
 ---
 # Source: helm/templates/deployment.yaml
 apiVersion: apps/v1
@@ -34,4 +34,59 @@ spec:
       - name: helm-dev
         image: ghcr.io/martinvasseur-lab/helm-deployment:1.0.0
         ports:
-        - containerPort: 3000
+        - containerPort: 5000
+---
+# Source: helm/templates/gateway-api.yaml
+apiVersion: gateway.networking.k8s.io/v1
+kind: Gateway
+metadata:
+  name: helm-gateway
+  namespace: kong
+spec:
+  gatewayClassName: helm-gateway-class
+  listeners:
+  - name: http
+    protocol: HTTP
+    port: 80
+---
+# Source: helm/templates/gateway-api.yaml
+apiVersion: gateway.networking.k8s.io/v1
+kind: GatewayClass
+metadata:
+  name: helm-gateway-class
+spec:
+  controllerName: gateway.networking.k8s.io/kong
+---
+# Source: helm/templates/gateway-api.yaml
+apiVersion: gateway.networking.k8s.io/v1
+kind: HTTPRoute
+metadata:
+  name: helm-route-dev
+  namespace: helm-dev
+spec:
+  parentRefs:
+  - name: helm-gateway
+    namespace: kong
+  rules:
+    - matches:
+        path:
+          type: PathPrefix
+          value: /
+      backendRefs:
+      - name: helm-service-dev
+        port: 5000
+---
+# Source: helm/templates/gateway-api.yaml
+apiVersion: gateway.networking.k8s.io/v1
+kind: ReferenceGrant
+metadata:
+  name: helm-reference-dev
+  namespace: kong
+spec:
+  from:
+  - group: gateway.networking.k8s.io
+    kind: HTTPRoute
+    namespace: helm-dev
+  to:
+  - group: gateway.networking.k8s.io
+    kind: Gateway
