--- a/chart/templates/gateway-api.yaml
+++ b/chart/templates/gateway-api.yaml
@@ -24,7 +24,7 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
   name: {{ .Values.gateway.route.name }}
-  namespace: {{ .Values.deployment.label }}
+  namespace: argocd
 spec:
   parentRefs:
   - name: {{ .Values.gateway.name }}
@@ -48,7 +48,7 @@ spec:
   from:
   - group: gateway.networking.k8s.io
     kind: HTTPRoute
-    namespace: {{ .Values.deployment.label }}
+    namespace: argocd
   to:
   - group: gateway.networking.k8s.io
     kind: Gateway
