--- a/manifests.yaml
+++ b/manifests.yaml
@@ -62,7 +62,7 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
   name: helm-route-dev
-  namespace: helm-dev
+  namespace: argocd
 spec:
   parentRefs:
   - name: helm-gateway
@@ -86,7 +86,7 @@ spec:
   from:
   - group: gateway.networking.k8s.io
     kind: HTTPRoute
-    namespace: helm-dev
+    namespace: argocd
   to:
   - group: gateway.networking.k8s.io
     kind: Gateway
