--- a/stages/dev/values.yaml
+++ b/stages/dev/values.yaml
@@ -13,8 +13,8 @@ service:
   name: helm-service-dev
 
 
-gateway:
-  route: 
-    name: helm-route-dev
-  reference:
-    name: helm-reference-dev
+# gateway:
+#   route: 
+#     name: helm-route-dev
+#   reference:
+#     name: helm-reference-dev
