--- a/stages/prod-eu/values.yaml
+++ b/stages/prod-eu/values.yaml
@@ -12,8 +12,8 @@ deployment:
 service: 
   name: helm-service-prod-eu
 
-gateway:
-  route: 
-    name: helm-route-prod-eu
-  reference:
-    name: helm-reference-prod-eu
+# gateway:
+#   route: 
+#     name: helm-route-prod-eu
+#   reference:
+#     name: helm-reference-prod-eu
